fix modal overflow bug

--- a/deploy/data/usr/share/homed-web/css/app.css
+++ b/deploy/data/usr/share/homed-web/css/app.css
@@ -992,6 +992,7 @@ tr:first-child td {
 }
 
 #modal .data {
+    overflow-x: auto;
     max-width: min(600px, calc(100% - 40px));
     margin: 25px auto;
     padding: 10px;
